--- a/index.css
+++ b/index.css
@@ -44,9 +44,15 @@ header .navbar a:hover
     color:var(--green);
 }
 
+header .navbar img
+{
+	width: 30px;
+	height: 30px;
+}
+
 .video
 {
-	height: 99vh;
+	height: 100vh;
 	width: 99vw;
 	float: left;
 	background-color: black;
@@ -61,17 +67,92 @@ header .navbar a:hover
 	transform: translate(-50%, -50%);
 }
 
+.jiemian
+{
+	height: 100vh;
+	width: 99vw;
+	float: left;
+	background-color: darksalmon;
+}
+
+.news
+{
+	width:35vw;
+	margin:0 auto;
+	padding:10px;
+	float: left;
+	overflow:auto;
+}
+
+.news ul
+{
+	list-style: none;
+}
+
+.news ul li
+{
+	list-style: none;
+	font-size:18px;
+	width:30vw;
+	border-bottom:1px solid #000000;
+	display:block;
+	height:30px;
+	line-height:30px;
+	margin:3px 2px;
+	float:left;
+	overflow:auto;
+}
+
+.news a:hover
+{
+	color:#009999;
+}
+.news li:hover
+{
+	border-left:solid #6C9;
+	border-bottom:solid #6C9;
+	background-color:#CCC;
+}	
+
+.news h1
+{
+	font-family: 华文新魏;
+	text-align: center;
+}
+
+.shipin video
+{
+	width: 50vw;
+	float: left;
+	margin: 40px;
+}
+
 .text
 {
-	width: 25vw;
-	height: 90vh;
+	width: 90vw;
 	float: left;
-	background-color: lightcoral;
-	padding: 30px;
+	display: block;
+}
+
+.text h1
+{
+	text-align: center;
+	font-family: 华文新魏;
 }
 
 .text h3
 {
-	font-size: 28px;
 	font-family: 楷体;
+	margin-left: 60px;
+}
+
+.text a
+{
+	font-family: 楷体;
+	margin-left: 60px;
+}
+
+hr
+{
+	width: 97vw;
 }
